--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="A cool, calm place to learn how to meditate Daily">
+    <meta name="key-words" content="Meditation, Mindfulness, Calm, Relax, learning">
+  
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Daily Meditation</title>
+
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    Meditation Time
 </body>
 </html>
