Add style fonts and remove default margins, padding and border

--- a/index.html
+++ b/index.html
@@ -9,12 +9,30 @@
   
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Daily Meditation</title>
-
 </head>
 <body>
     <header>
-
+       <a href="index.html">
+           <h1> Welcome to the meditation club!</h1>
+    </a>
+    <nav><ul> 
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Benefits</a></li>
+        <li><a href="#">Techniques</a></li>
+        <li><a href="#">Sign Up</a></li>
+    </ul></nav>
     </header>
-    Meditation Time
+    
+    <section>Image
+
+    </section>
+    <section>Benefits of Meditation
+
+    </section>
+    <section>Techniques
+    </section>
+    <section> Sign Up
+
+    </section>
 </body>
 </html>
