add styles for headings and logos

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <header>
-       <a href="index.html">
-           <h1> Welcome to the meditation club!</h1>
+       <a href="index.html" class="active">
+           <h1 id="logo"> The Meditation Club</h1>
     </a>
-    <nav><ul> 
+    <nav><ul id="menu"> 
         <li><a href="#">Home</a></li>
         <li><a href="#">Benefits</a></li>
         <li><a href="#">Techniques</a></li>
