add style to cover text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     </ul></nav>
     </header>
     
-    <section>Image
+    <section><div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Meditation techniques that anyone can use, daily!</h2>
+            <h3>Learn more about meditation, it's benefits to every day life and how you can get started today</h3>
+        </div>
 
     </section>
     <section>Benefits of Meditation
