added nav elements and id to sections

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
            <h1 id="logo"> The Meditation Club</h1>
     </a>
     <nav><ul id="menu"> 
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Benefits</a></li>
-        <li><a href="#">Techniques</a></li>
-        <li><a href="#">Sign Up</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#benefits">Benefits</a></li>
+        <li><a href="#techniques">Techniques</a></li>
+        <li><a href="#sign">Sign Up</a></li>
     </ul></nav>
     </header>
     
@@ -29,13 +29,14 @@
             <h3>Learn more about meditation, it's benefits to every day life and how you can get started today</h3>
         </div>
 
-    </section>
+    </section id="benefits">
     <section>Benefits of Meditation
 
     </section>
-    <section>Techniques
+    <section id="techniques">Techniques
+        
     </section>
-    <section> Sign Up
+    <section id="sign"> Sign Up
 
     </section>
 </body>
