style cover text

--- a/index.html
+++ b/index.html
@@ -15,26 +15,29 @@
        <a href="index.html" class="active">
            <h1 id="logo"> The Meditation Club</h1>
     </a>
-    <nav><ul id="menu"> 
-        <li><a href="#home">Home</a></li>
-        <li><a href="#benefits">Benefits</a></li>
-        <li><a href="#techniques">Techniques</a></li>
-        <li><a href="#sign">Sign Up</a></li>
-    </ul></nav>
+    <nav>
+        <ul id="menu"> 
+            <li><a href="#sign">Sign Up</a></li>
+            <li><a href="#techniques">Techniques</a></li>
+            <li><a href="#benefits">Benefits</a></li>
+            <li><a href="#home">Home</a></li>
+    </ul>
+</nav>
     </header>
     
-    <section><div id="hero-image"></div>
+    <section>
+        <div id="hero-image"></div>
         <div id="cover-text">
-            <h2>Meditation techniques that anyone can use, daily!</h2>
-            <h3>Learn more about meditation, it's benefits to every day life and how you can get started today</h3>
+            <h2>Join Our online Club Today!</h2>
+            <h3>Get started using our 'Sign Up' section</h3>
         </div>
 
     </section id="benefits">
-    <section>Benefits of Meditation
+    <section>Benefits of Meditation- Learn more about meditation, it's benefits and how you can get started with our step by step guides, today
 
     </section>
     <section id="techniques">Techniques
-        
+
     </section>
     <section id="sign"> Sign Up
 
