add about us and techniques sections and styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul id="menu"> 
             <li><a href="#sign">Sign Up</a></li>
             <li><a href="#techniques">Techniques</a></li>
-            <li><a href="#benefits">Benefits</a></li>
+            <li><a href="#about-us">About us</a></li>
             <li><a href="#home">Home</a></li>
     </ul>
 </nav>
@@ -32,11 +32,16 @@
             <h3>Get started using our 'Sign Up' section</h3>
         </div>
 
-    </section id="benefits">
-    <section>Benefits of Meditation- Learn more about meditation, it's benefits and how you can get started with our step by step guides, today
+    </section> 
+    <h1 id="about-us">About us</h1>
+    <p id="about-p">
+        We are an online group that share Meditation Techniques via email on the Daily. 
+        We send out zoom links for free classes, share guided youtube videos and even have a slack server for our welcoming group to socialise</p>
+    <section>
 
     </section>
-    <section id="techniques">Techniques
+    <section id="techniques">
+         <h1 id="techniques">Meditation Techniques</h1>
 
     </section>
     <section id="sign"> Sign Up
