add technique examples, list, styling and guided meditation technique

--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
     </section>
     <section id="techniques">
          <h1 id="techniques">Meditation Techniques</h1>
+         <p>
+            Experienced meditators agree: a daily meditation practice can have significant benefits for mental and physical health. 
+            But one thing they probably won’t agree on? The most effective types of meditation. 
+            That’s simply because it’s different for everyone. After all, there are literally hundreds of meditation techniques encompassing practices from different traditions, cultures, spiritual disciplines, and religions. 
+            There’s not a universally accepted “best” or “most effective” type; rather, it is our individual preference that helps us choose the one (or ones) that works best for us.
+            Here are some examples of the different types of techniques ...
+         </p>
+         <ul id="techniques-list">
+             <li>Mindfulness Meditation</li>
+             <li>Progressive relaxation Meditation</li>
+            <li>Breath Awareness Meditation</li>
+            <li>Kundali Yoga</li>
+            <li>Loving-Kindness Meditation</li>
+            <li>Zen Meditation</li>
+        </ul>
 
     </section>
     <section id="sign"> Sign Up
