add fields for email subscriptions and style

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <section>
         <div id="hero-image"></div>
         <div id="cover-text">
-            <h2>Join Our online Club Today!</h2>
-            <h3>Get started using our 'Sign Up' section</h3>
+            <h2>Online Meditation has never been so easy.</h2>
+            <h3>Get started Today!</h3>
         </div>
 
     </section> 
@@ -58,8 +58,26 @@
             <li>Zen Meditation</li>
         </ul>
 
+
+        <h4>Here is just a small example of what we send our club members.
+            After signing up you will also receive guided videos, motivational quotes, links to free zoom classes and our slack groups.
+        </h4>
+        <img src="assets/css/images/6-step-breath-meditation.png" alt="6 Step guided Meditation" class="guide">
+
     </section>
-    <section id="sign"> Sign Up
+    <section id="sign"> 
+        <form action="" method="POST">
+            <div>
+            <label for="name-field">Name</label>
+            <input id="name-field" type="text" name="full_name" placeholder="Your name">
+        </div>
+            <div>
+            <label for="email">Email </label>
+            <input id="email-field" type="email" placeholder="Your email">
+            </div>
+            
+            <input type="submit" value="Join our club">
+        </form>
 
     </section>
 </body>
