Made website responsive to other devices and screensizes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A cool, calm place to learn how to meditate Daily">
     <meta name="key-words" content="Meditation, Mindfulness, Calm, Relax, learning">
+    <meta img src= (../css/images/Hero-project-image.jpeg) class="img-responsive" alt="Responsive image">
+    <meta img src= (../css/images/6-step-breath-meditation.png) class="img-responsive" alt="Responsive image">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +39,7 @@
         </div>
 
     </section> 
-    <h1 id="about-us">About us</h1>
+    <h2 id="about-us">About us</h2>
     <p id="about-p">
         We are an online group that share Meditation Techniques via email on the Daily. 
         We send out zoom links for free classes, share guided youtube videos and even have a slack server for our welcoming group to socialise</p>
@@ -43,7 +47,9 @@
 
     </section>
     <section id="techniques">
-         <h1 id="techniques">Meditation Techniques</h1>
+         <h2 id="techniques">Meditation Techniques</h2>
+         <br>
+         <br>
          <p>
             Experienced meditators agree: a daily meditation practice can have significant benefits for mental and physical health. 
             But one thing they probably won’t agree on? The most effective types of meditation. 
@@ -53,11 +59,11 @@
          </p>
          <ul id="techniques-list">
              <li>Mindfulness Meditation</li>
-             <li>Progressive relaxation Meditation</li>
-            <li>Breath Awareness Meditation</li>
-            <li>Kundali Yoga</li>
-            <li>Loving-Kindness Meditation</li>
-            <li>Zen Meditation</li>
+             <li>Progressive Relaxation Meditation</li>
+             <li>Breath Awareness Meditation</li>
+             <li>Kundali Yoga</li>
+             <li>Loving-Kindness Meditation</li>
+             <li>Zen Meditation</li>
         </ul>
 
 
@@ -83,9 +89,27 @@
         </form>
 
     </section>
+
 </fieldset>
 </body>
-<footer>
+
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
     
-</footer>
 </html>
